8200556: AArch64: assertion failure in slowdebug builds

Reviewed-by: adinn